[package]
name = "revolver"
version = "0.2.0"
edition = "2021"
readme = "README.md"
authors = ["Kindred Group", "Emil Koutanov"]
license = "MIT"
description = "A library for building REPL applications."
repository = "https://github.com/kindredgroup/revolver"
keywords = ["cli", "repl", "terminal", "shell"]
exclude = ["/images", "/bin", "/.idea", "/.github", "/coverage", "/doc", "/examples"]

[dependencies]
thiserror = "1.0.37"
stanza = "0.3.0"

[dev-dependencies]
stdio-override = "0.1.3"
flanker-temp = "0.5.0"
